syntax = "proto3";

package shop.user.v1beta1;

option go_package = "github.com/demeero/shop-sandbox/proto/gen/go/shop/user/v1beta1";

import "shop/user/v1beta1/user.proto";

service UserService {
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {}
}

message ListUsersRequest {
  // The continuation token, which is used to page through large result sets.
  // To get the next page of results, set this parameter to the value of nextPageToken from the previous response.
  // Optional.
  int32 page_size = 1;

  // The maximum number of results returned by this request.
  // If page_size isn't provided, the server will decide the number of results to be returned.
  // Optional.
  string page_token = 2;
}

message ListUsersResponse {
  // A token to retrieve next page of results.
  string next_page_token = 1;

  repeated User users = 2;
}